[workspace]
members = [
    "actix",
    "actix-broker",
    "actix-derive",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.68"

[patch.crates-io]
actix = { path = "actix" }
actix-broker = { path = "actix-broker" }
actix_derive = { path = "actix-derive" }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
