[workspace]
resolver = "2"
members = [
    "actix",
    "actix-broker",
    "actix-derive",
]

[workspace.package]
edition = "2021"
rust-version = "1.72"

[patch.crates-io]
actix = { path = "actix" }
actix-broker = { path = "actix-broker" }
actix_derive = { path = "actix-derive" }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
