[package]
name = "actix-broker"
version = "0.4.3"
edition = "2018"
authors = [
    "Chris Ricketts <chris.ricketts@steribar.com>",
]
description = "Message broker for the Actix actor framework"
keywords = ["actix", "message", "broker"]
repository = "https://github.com/actix/actix"
license = "MIT OR Apache-2.0"

[dependencies]
actix = ">=0.11.0, <0.14"
ahash = { version = "0.7", default-features = false }
log = "0.4"

[dev-dependencies]
actix-web = { version = "4", default-features = false }
