[package]
name = "actix"
version = "0.11.0-beta.3"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "Actor framework for Rust"
readme = "README.md"
keywords = ["actor", "futures", "actix", "async", "tokio"]
repository = "https://github.com/actix/actix"
documentation = "https://docs.rs/actix"
categories = ["network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"
exclude = [".gitignore", ".cargo/config", ".github/**", "codecov.yml"]
edition = "2018"

[lib]
name = "actix"
path = "src/lib.rs"

[features]
default = ["macros"]

# Re-exports derive macros from actix-derive and enables `#[actix::main]`.
macros = ["actix_derive"]

# DNS resolver
resolver = ["trust-dns-proto", "trust-dns-resolver"]

# Adds assertion to prevent processing too many messages on event loop
mailbox_assert = []

[dependencies]
actix-rt = { version = "2.0.0", default-features = false }
actix_derive = { version = "0.6.0-beta.2", optional = true }

bitflags = "1.2"
bytes = "1"
crossbeam-channel = "0.5"
futures-core = { version = "0.3.7", default-features = false }
futures-sink = { version = "0.3.7", default-features = false }
futures-task = { version = "0.3.7", default-features = false }
futures-util = { version = "0.3.7", default-features = false }
log = "0.4"
once_cell = "1.5"
parking_lot = "0.11"
pin-project-lite = "0.2"
smallvec = "1.6.1"
tokio = { version = "1", features = ["io-util", "sync"] }
tokio-util = { version = "0.6.3", features = ["codec", "io"] }

# dns resolver
trust-dns-proto = { version = "0.20.0" , optional = true, default-features = false, features = ["tokio-runtime"] }
trust-dns-resolver = { version = "0.20.0" , optional = true, default-features = false, features = ["tokio-runtime", "system-config"] }

[dev-dependencies]
doc-comment = "0.3"
futures-util = { version = "0.3.7", default-features = false, features = ["alloc"] }

[[example]]
name = "fibonacci"
required-features = ["macros"]

[[example]]
name = "ping"
required-features = ["macros"]

[[example]]
name = "weak_addr"
required-features = ["macros"]

[[example]]
name = "weak_recipient"
required-features = ["macros"]
