[package]
name = "chat"
version = "0.1.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
workspace = "../../"
edition = "2018"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
bytes = ""
byteorder = ""
futures = "0.3"
rand = ""

serde = ""
serde_json = ""
serde_derive = ""

tokio = { version = "0.2", default-features=false, features=["tcp", "time", "signal", "io-util"] }
tokio-util = { version = "", features = ["codec"] }

actix = { path = "../../" }
actix_derive = ""
actix-rt = "1.0"