[package]
name = "chat"
version = "0.1.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
workspace = "../../"
edition = "2018"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
bytes = "0.5"
byteorder = "1.3"
futures-util = "0.3"
rand = "0.7"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "0.2", default-features=false, features=["tcp", "time", "signal", "io-util"] }
tokio-util = { version = "0.3", features = ["codec"] }

actix = { path = "../../" }
actix_derive = "0.5"
actix-rt = "1.0"
