[package]
name = "chat"
version = "0.1.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
workspace = "../../"
edition = "2018"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
actix = { path = "../../" }
actix_derive = "0.5"
actix-rt = "2.0.0-beta.1"

async-stream = "0.3"
bytes = "1"
byteorder = "1.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1"
tokio-util = { version = "0.6", features = ["codec"] }
